# local_prompt_notion

./: .env  .env.example  .env.tauri.example  .gitignore  BLOG_2026-01-10.md  COUNTDOWN_TESTING_GUIDE.md  COUNTDOWN_TESTING_SUMMARY.md  IMAGE_PASTE_GUIDE.md  IMPLEMENTATION_VERIFICATION.md  LUMI_INTEGRATION_GUIDE.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.js  test-json-importer.html  test-markdown-importer.html  view.md  vite.config.ts  xq.md
.ai/: LUMI_BUGFIX_2026-01-24.md  SUMMARY_2026-01-24.md
docs/: Creation System.md  Data Transfer Awareness .md  Deletion Awareness.md  Favorite Feedback.md  Idle Chat System.md  Lumi Autonomous Behavior.md  Lumina Spirit Cat.md  Lumina.md  Pin Feedback.md  Restore Feedback.md  Scroll Wind.md  Time & Task Feedback.md  Update Feedback.md  jd.md  rename.md
scripts/: analyze-bundle.mjs  build-sidecar.mjs  check-desktop-build.cjs  cleanup-tauri-release.ps1  cleanup-temp-folders.bat  cleanup-temp-folders.cjs  emergency-stop-scanner.bat  finalize-desktop-state.mjs  measure-baseline.mjs  merge-runtime-metrics.mjs  optimize_icons.py  run-countdown-tests.bat  run-desktop-with-console.bat  seed-vault.cjs  test-batch-delete-100.cjs  test-category-move-performance.cjs  test-export-import-full.cjs  test-export-import-simple.cjs  test-export.cjs  test-import-categories.cjs  test-import-chinese.cjs  test-import-to-coding.cjs  test-import.cjs  test-path-safe.cjs  test-pin-feature.cjs  test-sidecar.bat  test-slug-generation.cjs  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/scheduler/: task_scanner.txt
src-tauri/src/: fs_api.rs  lib.rs  main.rs  perf.rs  syscheck.rs
src-tauri/src/scheduler/: commands.rs  events.rs  file_ops.rs  mod.rs  notification_manager.rs  scheduler.rs  task_evaluator.rs  task_scanner.rs
src-tauri/src/scheduler/tests/: mod.rs
(+156 files in other folders)
