[package]
name = "promptmanager"
version = "1.0.0"
description = "Lumina"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "Lumina"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "promptmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Lumina"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
