[package]
name = "lumina"
version = "1.0.0"
description = "Lumina - 本地优先的 AI 卡片与任务工作台"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "lumina"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lumina"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
parking_lot = "0.12"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sysinfo = "0.30"
tauri = { version = "2.9.5", features = [ "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"

[dev-dependencies]
proptest = "1"
